Update name and version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "rprx",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "interlinked",
+  "version": "0.1.0",
+  "main": "lib/index.js",
   "license": "MIT",
   "scripts": {
     "build": "babel -s inline -d lib src"
