--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
     "test": "mocha",
     "build": "babel -s inline -d lib src"
   },
-  "peerDependencies": {
-    "rxjs": "^5.0.0"
-  },
   "devDependencies": {
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
@@ -17,9 +14,11 @@
     "express": "^4.15.4",
     "mocha": "^4.0.1",
     "mocha-clean": "^1.0.0",
-    "rxjs": "^5.0.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "ws": "^3.2.0"
+  },
+  "dependencies": {
+    "rxjs": "^5.0.0"
   }
 }
