--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.15.4",
     "mocha": "^4.0.1",
     "mocha-clean": "^1.0.0",
+    "rxjs-marbles": "^2.1.0",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
     "ws": "^3.2.0"
