--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "interlinked",
-  "version": "0.2.0-beta.3",
+  "version": "0.2.0-beta.4",
   "description": "Rx-enabled peer-to-peer RPC",
   "main": "lib/index.js",
   "license": "MIT",
@@ -17,7 +17,7 @@
   ],
   "scripts": {
     "test": "mocha",
-    "build": "babel -s inline -d lib src"
+    "build": "babel -d lib src"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
