--- a/package.json
+++ b/package.json
@@ -29,9 +29,10 @@
     "rxjs-marbles": "^2.3.3",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "ws": "^3.2.0"
+    "ws": "^3.2.0",
+    "rxjs": "^5.5.10"
   },
-  "dependencies": {
+  "peerDependencies": {
     "rxjs": "^5.0.0"
   }
 }
