--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.0-beta.5",
   "description": "Rx-enabled peer-to-peer RPC",
   "main": "lib/index.js",
+  "module": "es/index.js",
   "license": "MIT",
   "author": "Brent Dillingham",
   "homepage": "https://github.com/brentd/interlinked",
@@ -17,20 +18,24 @@
   ],
   "scripts": {
     "test": "mocha",
-    "build": "babel -d lib src"
+    "build": "yarn run build:es && yarn run build:commonjs",
+    "build:es": "BABEL_ENV=es babel src --out-dir es",
+    "build:commonjs": "BABEL_ENV=commonjs babel src --out-dir lib",
+    "prepare": "yarn run build"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-preset-env": "^1.6.1",
     "express": "^4.15.4",
     "mocha": "^4.0.1",
     "mocha-clean": "^1.0.0",
+    "rxjs": "^5.5.10",
     "rxjs-marbles": "^2.3.3",
     "webpack": "^3.8.1",
     "webpack-dev-middleware": "^1.12.0",
-    "ws": "^3.2.0",
-    "rxjs": "^5.5.10"
+    "ws": "^3.2.0"
   },
   "peerDependencies": {
     "rxjs": "^5.0.0"
