--- a/package.json
+++ b/package.json
@@ -21,23 +21,22 @@
     "build": "yarn run build:es && yarn run build:commonjs",
     "build:es": "BABEL_ENV=es babel src --out-dir es",
     "build:commonjs": "BABEL_ENV=commonjs babel src --out-dir lib",
-    "prepare": "yarn run build"
+    "build:clean": "rm -rf es lib"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
+    "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-preset-env": "^1.6.1",
     "express": "^4.15.4",
-    "mocha": "^4.0.1",
-    "mocha-clean": "^1.0.0",
-    "rxjs": "^5.5.10",
-    "rxjs-marbles": "^2.3.3",
-    "webpack": "^3.8.1",
-    "webpack-dev-middleware": "^1.12.0",
+    "jest": "^23.4.2",
+    "parcel-bundler": "^1.9.7",
+    "rxjs": "^6.0.0",
+    "rxjs-marbles": "^4.3.0",
     "ws": "^3.2.0"
   },
   "peerDependencies": {
-    "rxjs": "^5.0.0"
+    "rxjs": "^6.0.0"
   }
 }
